--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <img class="flower-2-left" style="position: absolute;" src="images/background/flowers/left-1.svg">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                    <h2 style="font-size:14px; color:#113468; font-family: 'Itim', Arial, serif;" >NOI</h2>
+                    <h2 style="font-size:14px; color:#113468; font-family: 'Itim', Arial, serif;" >NOI,</h2>
                 </div>
             </div>
             <div class="couple-wrap animate-box">
@@ -212,12 +212,13 @@
 
 
             <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                <h2 style="font-size:14px; color:#113468; font-family: 'Itim', Arial, serif;"  >CU BINECUVÂNTAREA PARINȚILOR ȘI SUB ÎNDRUMAREA NAȘILOR, </h2>
+                <h2 style="font-size:14px; color:#113468; font-family: 'Itim', Arial, serif;"  >CU BINECUVÂNTAREA PĂRINȚILOR ȘI SUB ÎNDRUMAREA NAȘILOR, </h2>
             </div>
             <div class=" animate-box">
                 <div class="col-md-12 text-center">
 
                     <img src="images/riciu-circle.png" width="150" height="150">
+                    <br>
                     <br>
                     <h3 style="font-size:28px; color:#113468; font-family: 'WindSong', Arial, serif;"  >Simona și
                         Ionuț Riciu</h3>
